Adding more skipdry

--- a/base/openshift-ai/instance/dsc-init.yaml
+++ b/base/openshift-ai/instance/dsc-init.yaml
@@ -2,6 +2,8 @@ apiVersion: dscinitialization.opendatahub.io/v1
 kind: DSCInitialization
 metadata:
   name: default-dsci
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   applicationsNamespace: redhat-ods-applications
   monitoring:
