--- a/base/openshift-ai/instance/datasciencecluster.yaml
+++ b/base/openshift-ai/instance/datasciencecluster.yaml
@@ -2,6 +2,8 @@ kind: DataScienceCluster
 apiVersion: datasciencecluster.opendatahub.io/v1
 metadata:
   name: default
+  annotations:
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
 spec:
   components:
     codeflare:
