--- a/base/openshift-ai/instance/odhdashboardconfig.yaml
+++ b/base/openshift-ai/instance/odhdashboardconfig.yaml
@@ -3,5 +3,6 @@ kind: OdhDashboardConfig
 metadata:
   annotations:
     argocd.argoproj.io/sync-options: ServerSideApply=true
+    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
   name: odh-dashboard-config
   namespace: redhat-ods-applications
