--- a/overlays/prod/ocp4-eu/openshift-ai/kustomization.yaml
+++ b/overlays/prod/ocp4-eu/openshift-ai/kustomization.yaml
@@ -12,7 +12,7 @@ components:
   - components/default-notebook-pvc-size
   - components/model-server-pod-sizes
   - components/idle-notebook-culling
-
+  - components/mig-label-nodes
   - components/components-serving
   - components/components-training
 
