--- a/overlays/prod/ocp4-eu/openshift-ai/components/mig-label-nodes/node-label-sa.yaml
+++ b/overlays/prod/ocp4-eu/openshift-ai/components/mig-label-nodes/node-label-sa.yaml
@@ -21,6 +21,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  namespace: openshift-gitops
   name: node-label-rolebinding
 subjects:
   - kind: ServiceAccount
