--- a/overlays/prod/ocp4-eu/openshift-ai/components/mig-label-nodes/node-label-sa.yaml
+++ b/overlays/prod/ocp4-eu/openshift-ai/components/mig-label-nodes/node-label-sa.yaml
@@ -26,6 +26,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: node-label-sa
+    namespace: openshift-gitops
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
