--- a/overlays/prod/ocp4-eu/openshift-ai/components/mig-label-nodes/node-label-sa.yaml
+++ b/overlays/prod/ocp4-eu/openshift-ai/components/mig-label-nodes/node-label-sa.yaml
@@ -21,12 +21,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  namespace: openshift-gitops
+  namespace: redhat-ods-applications
   name: node-label-rolebinding
 subjects:
   - kind: ServiceAccount
     name: node-label-sa
-    namespace: openshift-gitops
+    namespace: redhat-ods-applications
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
